--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1 class="header">Sushi Count</h1>
             <p class="text-info lead">Click on the cards to increment the count</p>
             <div id="app"></div>
-            <footer class="text-white text-center mt-3">&copy; 2020- Betsy A. Gamrat - <a class="btn btn-light btn-sm" href="https://github.com/bgamrat/sushi">On GitHub</a></footer>
+            <footer class="text-white text-center mt-3">&copy; 2020- Betsy A. Gamrat</footer>
         </div>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
